# Text2TactileGraphics

./: .gitignore  README.md  pyproject.toml
blender-render-toolkit/: GLB_IMPORT_GUIDE.md  render_glb.py
src/experiments/: README.md  __init__.py  common.py
src/experiments/t2i/: 01_generate_images.py  02_estimate_geometry.py  03_evaluate_clip.py  04_aggregate_metrics.py  __init__.py  config.py  prompts.json
src/experiments/text2texture/: 01_generate_textures.py  02_estimate_normals.py  03_evaluate_clip.py  04_evaluate_patch_self_similarity.py  05_evaluate_hf_ratio.py  06_aggregate_metrics.py  __init__.py  config.py  prompts.json
src/experiments/tiling/: 01_generate_tiled.py  02_evaluate_tileability.py  03_aggregate_metrics.py  04_measure_timing.py  __init__.py  config.py  prompts.json
src/tactilegen/: __init__.py  config.py  secrets_.py
src/tactilegen/assets/: __init__.py
src/tactilegen/generation/: base_image_generation.py  models.py  segmentation.py  texture_generation.py  tileable_patch_generation.py  utils.py
src/tactilegen/geometry/: braille.py  displacement.py  filtering.py  tactile_graphics.py  utils.py
src/text2tactilegraphics/: __init__.py  config.py
tests/: test_config.py  test_secrets.py
tests/generation/: test_base_image_generation.py  test_generation_utils.py  test_models.py  test_segmentation.py  test_texture_generation.py  test_tileable_patch_generation.py
tests/geometry/: test_braille.py  test_displacement.py  test_filtering.py  test_mesh_utils.py  test_tactile_graphics.py
tests/ui/: test_app.py  test_handlers.py
(+41 files in other folders)
